--- a/themes/hugoplate/layouts/blog/list.html
+++ b/themes/hugoplate/layouts/blog/list.html
@@ -10,9 +10,9 @@
           <div class="row">
             {{ $paginator:= .Paginate .RegularPages }}
             {{ range $paginator.Pages }}
-              <div class="md:col-6 mb-14">
+              {{/*  <div class="md:col-6 mb-14">
                 {{ partial "components/blog-card" . }}
-              </div>
+              </div>  */}}
             {{ end }}
           </div>
           {{ partial "components/pagination.html" . }}
