--- a/themes/hugoplate/layouts/index.html
+++ b/themes/hugoplate/layouts/index.html
@@ -58,7 +58,7 @@
             <ul>
               {{ range .bulletpoints }}
                 <li class="relative mb-4 pl-6">
-                  <i class="fa fa-check absolute left-0 top-1.5"></i>
+                  <i class="fa fa-circle fa-2xs"></i>
                   {{ . | markdownify }}
                 </li>
               {{ end }}
